integration-tests/src/snapshots/integration_tests__integration_tests__coreutils-5.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: --getToolPath coreutils
Exit status: exit code: 0
STDOUT:
<DIRECTORY>/.tool-tool/v1/tools/coreutils/0.0.1.1

STDERR:


