integration-tests/src/snapshots/integration_tests__integration_tests__coreutils-6.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: --getBinaryPath coreutils
Exit status: exit code: 0
STDOUT:
<DIRECTORY>/.tool-tool/v1/tools/coreutils/0.0.1.1/coreutils.exe

STDERR:


