integration-tests/src/snapshots/integration_tests__integration_tests__coreutils-9.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: dir
Exit status: exit code: 0
STDOUT:
<DIRECTORY>/.tool-tool/v1/tools/coreutils/0.0.1.1

STDERR:


