integration-tests/src/snapshots/integration_tests__integration_tests__coreutils.snap
---
source: integration-tests/src/integration_tests.rs
expression: result
---
Command: --download
Exit status: exit code: 0
STDOUT:
🔧 ⏳ Downloading coreutils 0.0.1.1🔧 ✅ Downloading coreutils 0.0.1.1

STDERR:
🔧 Download complete!


